Fix job graph overflowing vertically

--- a/app/components/job/graphs/job-graphs-home/job-graphs-home.scss
+++ b/app/components/job/graphs/job-graphs-home/job-graphs-home.scss
@@ -11,7 +11,7 @@ bl-job-graphs-home {
     padding: $padding;
     height: $contentview-height;
 
-    .graph-header {
+    > .graph-header {
         height: $graph-header-height;
         display: flex;
         align-items: center;
@@ -49,7 +49,7 @@ bl-job-graphs-home {
         }
     }
 
-    .graph-container {
+    > .graph-container {
         height: $graph-height;
     }
 
